refactor: simplifica a coleta de listas em DespesaController e ReceitaController